-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.5.0
-
None
-
3
-
9397
Trying to build with --enable-lu_ref and it fails with
cc1: warnings being treated as errors /home/green/git/lustre-release/lustre/obdclass/lu_ref.c:160: error: Б─≤enum cfs_alloc_flagsБ─≥ declared inside parameter list /home/green/git/lustre-release/lustre/obdclass/lu_ref.c:160: error: its scope is only this definition or declaration, which is probably not what you want /home/green/git/lustre-release/lustre/obdclass/lu_ref.c:158: error: parameter 2 (Б─≤flagsБ─≥) has incomplete type /home/green/git/lustre-release/lustre/obdclass/lu_ref.c: In function Б─≤lu_ref_addБ─≥: /home/green/git/lustre-release/lustre/obdclass/lu_ref.c:191: error: type of formal parameter 2 is incomplete /home/green/git/lustre-release/lustre/obdclass/lu_ref.c: In function Б─≤lu_ref_add_atomicБ─≥: /home/green/git/lustre-release/lustre/obdclass/lu_ref.c:214: error: type of formal parameter 2 is incomplete make[6]: *** [/home/green/git/lustre-release/lustre/obdclass/lu_ref.o] Error 1 make[6]: *** Waiting for unfinished jobs....