LU-3652 luref: Fix building

Fix build when building with --enable-lu_ref
enum cfs_alloc_flags is no longer present when building for Linux.

Change-Id: I0f705939de5ee55bfc9b9d99a23d93accf5831db
Signed-off-by: Oleg Drokin <oleg.drokin@intel.com>
Reviewed-on: http://review.whamcloud.com/7150
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Reviewed-by: James Nunez <james.a.nunez@intel.com>